<?xml version="1.0" encoding="utf-8"?>
<!--
    Karuikey keeps the AOSP subtype model but exposes only locales backed by a bundled,
    offline layout resource. The initial enabled pair remains English/Russian.
-->
<input-method xmlns:android="http://schemas.android.com/apk/res/android"
    android:settingsActivity="tenkupng.karuikey.MainActivity"
    android:supportsSwitchingToNextInputMethod="true">
    <subtype android:label="@string/subtype_english_us" android:imeSubtypeLocale="en_US"
        android:languageTag="en-US" android:imeSubtypeMode="keyboard"
        android:imeSubtypeExtraValue="KeyboardLayoutSet=qwerty,AsciiCapable"
        android:isAsciiCapable="true" />
    <subtype android:label="@string/subtype_english_uk" android:imeSubtypeLocale="en_GB"
        android:languageTag="en-GB" android:imeSubtypeMode="keyboard"
        android:imeSubtypeExtraValue="KeyboardLayoutSet=qwerty,AsciiCapable"
        android:isAsciiCapable="true" />
    <subtype android:label="@string/subtype_english_india" android:imeSubtypeLocale="en_IN"
        android:languageTag="en-IN" android:imeSubtypeMode="keyboard"
        android:imeSubtypeExtraValue="KeyboardLayoutSet=qwerty,AsciiCapable"
        android:isAsciiCapable="true" />
    <subtype android:label="@string/subtype_russian" android:imeSubtypeLocale="ru_RU"
        android:languageTag="ru-RU" android:imeSubtypeMode="keyboard"
        android:imeSubtypeExtraValue="KeyboardLayoutSet=east_slavic" />
    <subtype android:label="@string/subtype_belarusian" android:imeSubtypeLocale="be_BY"
        android:languageTag="be-BY" android:imeSubtypeMode="keyboard"
        android:imeSubtypeExtraValue="KeyboardLayoutSet=east_slavic" />
    <subtype android:label="@string/subtype_ukrainian" android:imeSubtypeLocale="uk_UA"
        android:languageTag="uk-UA" android:imeSubtypeMode="keyboard"
        android:imeSubtypeExtraValue="KeyboardLayoutSet=east_slavic" />
    <subtype android:label="@string/subtype_german" android:imeSubtypeLocale="de_DE"
        android:languageTag="de-DE" android:imeSubtypeMode="keyboard"
        android:imeSubtypeExtraValue="KeyboardLayoutSet=qwertz,AsciiCapable"
        android:isAsciiCapable="true" />
    <subtype android:label="@string/subtype_czech" android:imeSubtypeLocale="cs_CZ"
        android:languageTag="cs-CZ" android:imeSubtypeMode="keyboard"
        android:imeSubtypeExtraValue="KeyboardLayoutSet=qwertz,AsciiCapable"
        android:isAsciiCapable="true" />
    <subtype android:label="@string/subtype_slovak" android:imeSubtypeLocale="sk_SK"
        android:languageTag="sk-SK" android:imeSubtypeMode="keyboard"
        android:imeSubtypeExtraValue="KeyboardLayoutSet=qwertz,AsciiCapable"
        android:isAsciiCapable="true" />
    <subtype android:label="@string/subtype_french" android:imeSubtypeLocale="fr_FR"
        android:languageTag="fr-FR" android:imeSubtypeMode="keyboard"
        android:imeSubtypeExtraValue="KeyboardLayoutSet=azerty,AsciiCapable"
        android:isAsciiCapable="true" />
    <subtype android:label="@string/subtype_spanish" android:imeSubtypeLocale="es_ES"
        android:languageTag="es-ES" android:imeSubtypeMode="keyboard"
        android:imeSubtypeExtraValue="KeyboardLayoutSet=spanish,AsciiCapable"
        android:isAsciiCapable="true" />
    <subtype android:label="@string/subtype_italian" android:imeSubtypeLocale="it_IT"
        android:languageTag="it-IT" android:imeSubtypeMode="keyboard"
        android:imeSubtypeExtraValue="KeyboardLayoutSet=qwerty,AsciiCapable"
        android:isAsciiCapable="true" />
    <subtype android:label="@string/subtype_dutch" android:imeSubtypeLocale="nl_NL"
        android:languageTag="nl-NL" android:imeSubtypeMode="keyboard"
        android:imeSubtypeExtraValue="KeyboardLayoutSet=qwerty,AsciiCapable"
        android:isAsciiCapable="true" />
    <subtype android:label="@string/subtype_polish" android:imeSubtypeLocale="pl_PL"
        android:languageTag="pl-PL" android:imeSubtypeMode="keyboard"
        android:imeSubtypeExtraValue="KeyboardLayoutSet=qwerty,AsciiCapable"
        android:isAsciiCapable="true" />
    <subtype android:label="@string/subtype_portuguese_brazil" android:imeSubtypeLocale="pt_BR"
        android:languageTag="pt-BR" android:imeSubtypeMode="keyboard"
        android:imeSubtypeExtraValue="KeyboardLayoutSet=qwerty,AsciiCapable"
        android:isAsciiCapable="true" />
    <subtype android:label="@string/subtype_romanian" android:imeSubtypeLocale="ro_RO"
        android:languageTag="ro-RO" android:imeSubtypeMode="keyboard"
        android:imeSubtypeExtraValue="KeyboardLayoutSet=qwerty,AsciiCapable"
        android:isAsciiCapable="true" />
    <subtype android:label="@string/subtype_turkish" android:imeSubtypeLocale="tr_TR"
        android:languageTag="tr-TR" android:imeSubtypeMode="keyboard"
        android:imeSubtypeExtraValue="KeyboardLayoutSet=qwerty,AsciiCapable"
        android:isAsciiCapable="true" />
    <subtype android:label="@string/subtype_danish" android:imeSubtypeLocale="da_DK"
        android:languageTag="da-DK" android:imeSubtypeMode="keyboard"
        android:imeSubtypeExtraValue="KeyboardLayoutSet=nordic,AsciiCapable"
        android:isAsciiCapable="true" />
    <subtype android:label="@string/subtype_finnish" android:imeSubtypeLocale="fi_FI"
        android:languageTag="fi-FI" android:imeSubtypeMode="keyboard"
        android:imeSubtypeExtraValue="KeyboardLayoutSet=nordic,AsciiCapable"
        android:isAsciiCapable="true" />
    <subtype android:label="@string/subtype_norwegian" android:imeSubtypeLocale="nb_NO"
        android:languageTag="nb-NO" android:imeSubtypeMode="keyboard"
        android:imeSubtypeExtraValue="KeyboardLayoutSet=nordic,AsciiCapable"
        android:isAsciiCapable="true" />
    <subtype android:label="@string/subtype_swedish" android:imeSubtypeLocale="sv_SE"
        android:languageTag="sv-SE" android:imeSubtypeMode="keyboard"
        android:imeSubtypeExtraValue="KeyboardLayoutSet=nordic,AsciiCapable"
        android:isAsciiCapable="true" />
    <subtype android:label="@string/subtype_german_switzerland" android:imeSubtypeLocale="de_CH"
        android:languageTag="de-CH" android:imeSubtypeMode="keyboard"
        android:imeSubtypeExtraValue="KeyboardLayoutSet=swiss,AsciiCapable"
        android:isAsciiCapable="true" />
    <subtype android:label="@string/subtype_french_switzerland" android:imeSubtypeLocale="fr_CH"
        android:languageTag="fr-CH" android:imeSubtypeMode="keyboard"
        android:imeSubtypeExtraValue="KeyboardLayoutSet=swiss,AsciiCapable"
        android:isAsciiCapable="true" />
    <subtype android:label="@string/subtype_italian_switzerland" android:imeSubtypeLocale="it_CH"
        android:languageTag="it-CH" android:imeSubtypeMode="keyboard"
        android:imeSubtypeExtraValue="KeyboardLayoutSet=swiss,AsciiCapable"
        android:isAsciiCapable="true" />
    <subtype android:label="@string/subtype_greek" android:imeSubtypeLocale="el_GR"
        android:languageTag="el-GR" android:imeSubtypeMode="keyboard"
        android:imeSubtypeExtraValue="KeyboardLayoutSet=greek" />
    <subtype android:label="@string/subtype_bulgarian" android:imeSubtypeLocale="bg_BG"
        android:languageTag="bg-BG" android:imeSubtypeMode="keyboard"
        android:imeSubtypeExtraValue="KeyboardLayoutSet=bulgarian" />
    <subtype android:label="@string/subtype_serbian" android:imeSubtypeLocale="sr_RS"
        android:languageTag="sr-RS" android:imeSubtypeMode="keyboard"
        android:imeSubtypeExtraValue="KeyboardLayoutSet=serbian_qwertz,AsciiCapable"
        android:isAsciiCapable="true" />
    <subtype android:label="@string/subtype_english_colemak" android:imeSubtypeLocale="en_US"
        android:languageTag="en-US" android:imeSubtypeMode="keyboard"
        android:imeSubtypeExtraValue="KeyboardLayoutSet=colemak,AsciiCapable"
        android:isAsciiCapable="true" />
    <subtype android:label="@string/subtype_english_dvorak" android:imeSubtypeLocale="en_US"
        android:languageTag="en-US" android:imeSubtypeMode="keyboard"
        android:imeSubtypeExtraValue="KeyboardLayoutSet=dvorak,AsciiCapable"
        android:isAsciiCapable="true" />
</input-method>
